--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -3,8 +3,9 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "bag3d_common"
+name = "bag3d-common"
 version = "2023.1001"
+description = "Resources, functions and type definitions that are used by the 3D BAG packages that define the data processing workflows."
 readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "Propietary" }
