Install bag3d-common from github

--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 ]
 urls = { github = "https://github.com/3DGI/3dbag-pipeline" }
 dependencies = [
-    "bag3d-common",
+    "bag3d-common @ git+https://github.com/3DGI/3dbag-pipeline.git@2023.1001#subdirectory=packages/common",
     "dagster",
     "dagster-postgres",
     "dagster-shell",
