--- a/packages/party_walls/pyproject.toml
+++ b/packages/party_walls/pyproject.toml
@@ -19,7 +19,8 @@ classifiers = [
 ]
 urls = { github = "https://github.com/3DGI/3dbag-pipeline" }
 dependencies = [
-    "bag3d-common",
+    "bag3d-common @ git+https://github.com/3DGI/3dbag-pipeline.git@2023.1001#subdirectory=packages/common",
+    "3dbag-shared-walls @ git+https://github.com/3DGI/3dbag-shared-walls.git@2023.1001#egg=3dbag_shared_walls",
     "dagster",
     "dagster-shell",
 ]
