Compute statistics for the partition

--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -39,5 +39,6 @@ docs = [
     "mkdocs-gen-files",
     "mkdocs-literate-nav",
     "mkdocs-section-index",
-    "markdown-include"
+    "mkdocs-material",
+    "markdown-include",
 ]
