--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "dagster",
     "dagster-shell",
     "docker",
-    "pgutils @ git+https://github.com/balazsdukai/pgutils.git@2022.1011#egg=pgutils",
+    "pgutils @ git+ssh://git@github.com/balazsdukai/pgutils.git@2022.1011#egg=pgutils",
     "psycopg[binary]",
     "requests",
 ]
