--- a/packages/party_walls/pyproject.toml
+++ b/packages/party_walls/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "numpy",
     "pandas",
     "dagster",
-    "dagster-shell",
+    "dagster-postgres",
 ]
 optional-dependencies = { dev = ["pytest", "bumpver", "tox", "dagster-webserver"] }
 
