--- a/packages/floors_estimation/pyproject.toml
+++ b/packages/floors_estimation/pyproject.toml
@@ -21,6 +21,7 @@ urls = { github = "https://github.com/3DGI/3dbag-pipeline" }
 dependencies = [
     "bag3d-common @ git+ssh://git@github.com/3DGI/3dbag-pipeline.git#egg=bag3d-common&subdirectory=packages/common",
     "sklearn-pandas",
+    "scikit-learn",
     "pandas",
     "dagster",
     "dagster-postgres",
