--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -42,3 +42,11 @@ docs = [
     "mkdocs-material",
     "markdown-include",
 ]
+
+[tool.bumpver]
+current_version = "2024.1002"
+version_pattern = "YYYY.BUILD"
+commit_message = "bump version {old_version} -> {new_version}"
+commit = true
+tag = true
+push = false
