--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -8,15 +8,15 @@ version = "2022.1003"
 description = "Workflow for producing the 3D BAG core data set"
 readme = "README.md"
 requires-python = ">=3.8"
-license = { text = "Propietary" }
 authors = [
-    { name = "3DGI", email = "info@3dgi.nl" },
+    { name = "Balázs Dukai", email = "balazs.dukai@3dgi.nl" },
+    { name = "Ravi Peters", email = "ravi.peters@3dgi.nl" },
     { name = "Gina Stavropoulou", email = "G.Stavropoulou@tudelft.nl" }
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Topic :: Scientific/Engineering :: GIS",
-    "License :: Other/Proprietary License"
+    "License :: OSI Approved :: Apache Software License"
 ]
 urls = { github = "https://github.com/3DGI/3dbag-pipeline" }
 dependencies = [
