--- a/packages/party_walls/pyproject.toml
+++ b/packages/party_walls/pyproject.toml
@@ -8,14 +8,14 @@ version = "2023.1001"
 description = "Workflow for calculating the party walls in the 3D BAG."
 readme = "README.md"
 requires-python = ">=3.8"
-license = { text = "Propietary" }
 authors = [
-    { name = "3DGI", email = "info@3dgi.nl" },
+    { name = "Balázs Dukai", email = "balazs.dukai@3dgi.nl" },
+    { name = "Ravi Peters", email = "ravi.peters@3dgi.nl" },
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Topic :: Scientific/Engineering :: GIS",
-    "License :: Other/Proprietary License"
+    "License :: OSI Approved :: Apache Software License"
 ]
 urls = { github = "https://github.com/3DGI/3dbag-pipeline" }
 dependencies = [
