--- a/packages/floors_estimation/pyproject.toml
+++ b/packages/floors_estimation/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "bag3d-floors-estimation"
 version = "2024.1001"
-description = "Workflow for predicting the number of floors, based on Ellie Roy's thesis.."
+description = "Workflow for predicting the number of floors, based on Ellie Roy's thesis."
 readme = "README.md"
 requires-python = ">=3.11"
 license = { text = "Propietary" }
