added pytest_postgres to toml files

--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
 dev = [
     "bumpver",
     "tox",
-    "pytest"
+    "pytest",
+    "pytest-postgresql"
 ]
 docs = [
     "mkdocs",
