--- a/packages/party_walls/pyproject.toml
+++ b/packages/party_walls/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "dagster",
     "dagster-postgres", # always need dagster-postgres, because we are using Postgres as the dagster run storage
 ]
-optional-dependencies = { dev = ["pytest", "bumpver", "tox"] }
+optional-dependencies = { dev = ["pytest", "bumpver", "tox", "pytest-postgresql"] }
 
 [tool.bumpver]
 current_version = "2024.1002"
