--- a/tests/dagster_home/workspace.yaml
+++ b/tests/dagster_home/workspace.yaml
@@ -3,8 +3,12 @@ load_from:
   - python_file:
       relative_path: ../../packages/core/src/bag3d/core/code_location.py
       location_name: core_py_311_virtual_env
-      executable_path: ../../venvs/venv_core/bin/python
+      executable_path: ../../venvs/venv_core/bin/python3.11
   - python_file:
       relative_path: ../../packages/party_walls/src/bag3d/party_walls/code_location.py
       location_name: party_walls_py_311_virtual_env
-      executable_path: ../../venvs/venv_party_walls/bin/python
+      executable_path: ../../venvs/venv_party_walls/bin/python3.11
+  - python_file:
+      relative_path: ../../packages/floors_estimation/src/bag3d/floors_estimation/code_location.py
+      location_name: floors_estimation_py_311_virtual_env
+      executable_path: ../../venvs/venv_floors_estimation/bin/python3.11
