--- a/docker/postgres/Dockerfile
+++ b/docker/postgres/Dockerfile
@@ -16,6 +16,8 @@ ENV PGDATA=/data
 ENV POSTGRES_USER=$pg_user
 ENV POSTGRES_PASSWORD=$pg_pswd
 ENV POSTGRES_DB=$pg_db
+ENV POSTGRES_HOST=localhost
+ENV POSTGRES_HOST_AUTH_METHOD=trust
 
 ENV DAGSTER_PG_USER=$dagster_pg_user
 ENV DAGSTER_PG_PASSWORD=$dagster_pg_pswd
