removed dagster config and updated link to data.

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - $PATH_TO_DATA:/var/lib/postgresql/data
+      - $PATH_TO_TEST_DATA:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
