--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REPO=/Users/localadmin/Repos/3dbag-pipeline
+REPO=/Users/localadmin/Repos/test_pipeline/3dbag-pipeline
 PATH_TO_VENVS=${REPO}/venvs
 PATH_TO_TEST_DATA=${REPO}/test_data
 PATH_TO_DOCKERFILE=${REPO}/docker/postgres
@@ -11,4 +11,6 @@ CONTAINER_NAME=bag3d_container_postgis
 POSTGRES_USER=baseregisters_test_user
 POSTGRES_PASSWORD=baseregisters_test_pswd
 POSTGRES_DB=baseregisters_test
+POSTGRES_PORT=5560
+
 
