--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "lxml>=4.6",
     "fabric"
 ]
-optional-dependencies = { dev = ["pytest", "bumpver", "tox", "dagster-webserver", "pytest-postgresql"] }
+optional-dependencies = { dev = ["pytest", "bumpver", "tox", "dagster-webserver", "pytest-postgresql", "pytest-dotenv"] }
 
 [tool.bumpver]
 current_version = "2024.1004"
@@ -43,5 +43,13 @@ push = false
 [tool.bumpver.file_patterns]
 "pyproject.toml" = [
     'version = "{version}"',
+]
+
+[tool.pytest.ini_options]
+env = [
+    "POSTGRES_USER=baseregisters_test_user",
+    "POSTGRES_PASSWORD=baseregisters_test_pswd",
+    "POSTGRES_DB=baseregisters_test",
+    "POSTGRES_PORT=5560"
 ]
 
