remove hardcoded values from .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REPO=/Users/localadmin/Desktop/testing/3dbag-pipeline
+REPO=<root of repo>
 PATH_TO_VENVS=${REPO}/venvs
 PATH_TO_TEST_DATA=${REPO}/test_data
 PATH_TO_DOCKERFILE=${REPO}/docker/postgres
