--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -31,7 +31,8 @@ dev = [
     "bumpver",
     "tox",
     "pytest",
-    "pytest-postgresql"
+    "pytest-postgresql",
+    "pytest-dotenv"
 ]
 docs = [
     "mkdocs",
