use https for git+ dependencies since all are public now

--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "dagster",
     "dagster-shell",
     "docker",
-    "pgutils @ git+ssh://git@github.com/balazsdukai/pgutils.git@2024.1013#egg=pgutils",
+    "pgutils @ git+https://github.com/balazsdukai/pgutils.git@2024.1013#egg=pgutils",
     "psycopg[binary]",
     "requests",
 ]
