--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: $IMAGE_NAME
-    command: -c 'shared_buffers=8GB'
+    command: ["-c", "shared_buffers=8GB", "-c", "max_connections=50", "-c", "work_mem=30MB"] 
     platform: linux/amd64
     container_name: $CONTAINER_NAME
     ports:
