--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -32,7 +32,8 @@ dev = [
     "tox",
     "pytest",
     "pytest-postgresql",
-    "pytest-dotenv"
+    "pytest-dotenv",
+    "coverage"
 ]
 docs = [
     "mkdocs",
