Fix the docker postgis logs issue
- I switched to docker volume instead of a bind-mount for storing the logs. Then the logs can be checked by exploring the docker volume.
- Use docker compose for stopping the container and removing it, incl. the created network
- Use the bag3d_ prefix for docker compose
- Remove the docker config values from .env, except IMAGE_NAME, because the yaml keys are not configurable in the compose.yaml, and for using a volume, i need to list the volume name as a key under 'volumes'

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -3,15 +3,18 @@ services:
     image: $IMAGE_NAME
     command: ["-c", "shared_buffers=8GB", "-c", "max_connections=50", "-c", "work_mem=30MB", "-c", "logging_collector=on", "-c", "log_statement=all", "-c", "log_directory=/var/log/postgresql/"]
     platform: linux/amd64
-    container_name: $CONTAINER_NAME
+    container_name: bag3d_postgis
     shm_size: '1gb' 
     ports:
       - "5560:5432"
     volumes:
       - $PATH_TO_TEST_DATA:/var/lib/postgresql/data
-      - $PATH_TO_DB_LOGS:/var/log/postgresql/
+      - postgis_volume:/var/log/postgresql/
     environment:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DB
     restart: always
+
+volumes:
+  postgis_volume:
