Pin common version in packages; Increment versions

--- a/packages/party_walls/pyproject.toml
+++ b/packages/party_walls/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bag3d-party-walls"
-version = "2024.1002"
+version = "2024.1003"
 description = "Workflow for calculating the party walls in the 3D BAG."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -19,7 +19,7 @@ classifiers = [
 ]
 urls = { github = "https://github.com/3BAG/3dbag-pipeline" }
 dependencies = [
-    "bag3d-common @ git+https://github.com/3DBAG/3dbag-pipeline.git#egg=bag3d-common&subdirectory=packages/common",
+    "bag3d-common @ git+https://github.com/3DBAG/3dbag-pipeline.git@2024.1004#egg=bag3d-common&subdirectory=packages/common",
     "urban-morphology-3d @ git+https://github.com/3DGI/urban-morphology-3d.git@onlysharedwalls#egg=urban-morphology-3d",
     "shapely",
     "numpy",
@@ -32,7 +32,7 @@ dependencies = [
 dev = ["pytest", "bumpver", "tox", "pytest-dotenv", "coverage"] 
 
 [tool.bumpver]
-current_version = "2024.1002"
+current_version = "2024.1003"
 version_pattern = "YYYY.BUILD"
 commit_message = "bump version {old_version} -> {new_version}"
 commit = true
