--- a/packages/party_walls/pyproject.toml
+++ b/packages/party_walls/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
 ]
 urls = { github = "https://github.com/3BAG/3dbag-pipeline" }
 dependencies = [
-    "bag3d-common @ git+https://github.com/3DBAG/3dbag-pipeline.git@integration-and-configutation#egg=bag3d-common&subdirectory=packages/common",
+    "bag3d-common @ git+https://github.com/3DBAG/3dbag-pipeline.git@develop#egg=bag3d-common&subdirectory=packages/common",
     "urban-morphology-3d @ git+https://github.com/3DGI/urban-morphology-3d.git@onlysharedwalls#egg=urban-morphology-3d",
     "shapely",
     "numpy",
