--- a/packages/party_walls/pyproject.toml
+++ b/packages/party_walls/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies] 
-dev = ["pytest", "bumpver", "tox", "pytest-dotenv", "coverage"] 
+dev = ["pytest", "bumpver", "tox", "pytest-dotenv", "coverage", "ruff"]
 
 [tool.bumpver]
 current_version = "2024.1004"
