--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -44,3 +44,11 @@ push = false
 "pyproject.toml" = [
     'version = "{version}"',
 ]
+
+[tool.ruff]
+line-length = 88
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+docstring-code-format = false
