--- a/packages/common/pyproject.toml
+++ b/packages/common/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 authors = [
     { name = "Balázs Dukai", email = "balazs.dukai@3dgi.nl" },
+    { name = "Gina Stavropoulou", email = "G.Stavropoulou@tudelft.nl" },
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
