Add make instruction for docker tools build

--- a/docker/tools/.env
+++ b/docker/tools/.env
@@ -6,7 +6,7 @@ BAG3D_TEST_DATA=${PWD}/tests/test_data
 BAG3D_FLOORS_ESTIMATION_MODEL=${BAG3D_TEST_DATA}/model/pipeline_model1_gbr_untuned.joblib
 BAG3D_EXPORT_DIR=${BAG3D_TEST_DATA}/reconstruction_input/3DBAG/export
 
-BAG3D_PG_DOCKERFILE=${PWD}/docker/postgres
+BAG3D_PG_DOCKERFILE=${PWD}/docker/postgres/Dockerfile
 BAG3D_PG_DOCKERIMAGE=bag3d_image_postgis
 BAG3D_PG_USER=baseregisters_test_user
 BAG3D_PG_PASSWORD=baseregisters_test_pswd
