--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,35 @@
-tmp
-venvs
-experiments
-tests/dagster_home
-tests/test_data
-docs
-docker/docker-copyedit
-.git
-.ruff_cache
+# Local env
+.env_*
+.env
+
+# IDE config
+.run
+.idea
+
+# Build artifacts and cache
+.pytest_cache
+*__pycache__*
+
+# Test data
+tmp/*
+
+# Local DAGSTER_HOME
+tests/dagster_home/.logs_queue/
+tests/dagster_home/.nux
+tests/dagster_home/.telemetry/
+tests/dagster_home/history/
+tests/dagster_home/logs/
+tests/dagster_home/schedules/
+tests/dagster_home/storage/
+
+# Virtual envs
+venvs/venv_*
+
+# Documentation
+site
+docs/reference
+
+# Tools
+.tox
+.coverage
+*.ruff_cache
