--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,4 @@
-DAGSTER_HOME=${PWD}/tests/dagster_home
+DAGSTER_HOME=/opt/dagster/dagster_home
 TOOLS_DIR=${PWD}/.build-3dbag-pipeline
 
 BAG3D_VENVS=${PWD}/venvs
@@ -11,8 +11,8 @@ BAG3D_PG_DOCKERIMAGE=bag3d_image_postgis
 BAG3D_PG_USER=baseregisters_test_user
 BAG3D_PG_PASSWORD=baseregisters_test_pswd
 BAG3D_PG_DATABASE=baseregisters_test
-BAG3D_PG_HOST=localhost
-BAG3D_PG_PORT=5560
+BAG3D_PG_HOST=data_postgresql
+BAG3D_PG_PORT=5432
 BAG3D_PG_SSLMODE=allow
 
 TYLER_RESOURCES_DIR=${TOOLS_DIR}/share/tyler/resources
